@@ -122,7 +122,7 @@
 
       <varlistentry>
         <term><emphasis role="bold">IN-BANDWIDTH</emphasis> - <emphasis
-        role="bold"><replaceable>bandwidth</replaceable></emphasis></term>
+        role="bold"><replaceable>bandwidth</replaceable>[:<replaceable>burst</replaceable>]</emphasis></term>
 
         <listitem>
           <para>The incoming <emphasis>bandwidth</emphasis> of that interface.
@@ -137,6 +137,13 @@
           value to zero in which case Shorewall6 will not create an ingress
           qdisc.Must be set to zero if the REDIRECTED INTERFACES column is
           non-empty.</para>
+
+          <para>The optional burst option was added in Shorewall6 4.4.13. The
+          default <replaceable>burst</replaceable> is 10kb. A larger
+          <replaceable>burst</replaceable> can help make the
+          <replaceable>bandwidth</replaceable> more accurate; often for fast
+          lines, the enforced rate is well below the specified
+          <replaceable>bandwidth</replaceable>.</para>
         </listitem>
       </varlistentry>
 
