@@ -24,6 +24,9 @@ VI.   PROBLEMS CORRECTED AND NEW FEATURES IN PRIOR RELEASES
     	   string at /usr/share/shorewall/Shorewall/Tc.pm line 979,
     	   <$currentfile> line 11.
 
+2)  The <burst> option for the IN-BANDWIDTH column of tcdevices was
+    previously not recognized. That functionality has been restored.
+
 4.4.18 RC 1
 
 1)  None.
