@@ -2,6 +2,8 @@ Changes in Shorewall 4.4.18 Final
 
 1)  Correct handling of IPv6 host address in a net context.
 
+2)  Restore <burst> in tcdevices.
+
 Changes in Shorewall 4.4.18 RC 1
 
 1)  Update Version.
